--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,12 +2,10 @@ name: Release forwarder artefact
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "BRONTO-1358" ]
 
 jobs:
   deployment:
-    environment: production
-
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -22,22 +20,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set Version
-        id: set-version
-        run: |
-          echo "VERSION=${{ env.VERSION }}" >> $GITHUB_OUTPUT
-
       - name: Build Artefact
         run: ./build.sh ${{ env.VERSION }}
-
-      - name: Upload ${{ env.VERSION }} artifacts to S3
-        uses: brontoio/logchat-actions/s3-file-upload@main
-        with:
-          directory: "build"
-          target: ${{ env.VERSION }}
-          bucket: "releases.bronto.io/integrations/azure/forwarders/eventhub"
 
       - name: Tag Version
         if: success()
         run: git tag ${{ env.VERSION }} && git push --tags
         shell: bash
+
+      - name: Create Release
+        if: success()
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.VERSION }}
+          release_name: v${{ env.VERSION }}
+
+      - name: Compute package hash
+        run: openssl dgst -sha256 -binary bronto-azure-forwarder.zip | openssl enc -base64 > bronto-azure-forwarder.zip.b64sha256
+        shell: bash
+
+      - name: Release Artefact
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ env.VERSION }}
+          files: |
+            bronto-azure-forwarder.zip
+            bronto-azure-forwarder.zip.b64sha256
